--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+firmware-nonfree (1:20161130-3+rpt3utopia1) experimental; urgency=low
+
+  * Utopia repository import.
+  * Disable everything except firmware-brcm80211
+
+ -- James Lu <james@overdrivenetworks.com>  Mon, 02 Jul 2018 14:35:24 -0700
+
 firmware-nonfree (1:20161130-3+rpt3) stretch; urgency=medium
 
   * Add brcmfmac43455-sdio version 7.45.154
