--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ firmware-nonfree (1:20161130-3+rpt3utopia1) experimental; urgency=low
 
   * Utopia repository import.
   * Disable everything except firmware-brcm80211
+  * Limit build to armhf arm64; avoid overriding the Debian firmware packages
+    on other architectures.
 
  -- James Lu <james@overdrivenetworks.com>  Mon, 02 Jul 2018 14:35:24 -0700
 
