--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 firmware-nonfree (1:20161130-3+rpt3utopia1) experimental; urgency=low
 
   * Utopia repository import.
+  * Bump to linux-support 4.9.0-6
   * Disable everything except firmware-brcm80211
   * Limit build to armhf arm64; avoid overriding the Debian firmware packages
     on other architectures.
